objects/ccpt__Note__c.object
<CustomObject>
    <fields>
        <fullName>ccpt__Checklist__c</fullName>
        <label>Checklist</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccpt__Color_Tag__c</fullName>
        <label>Color Tag</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccpt__Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccpt__Notepad__c</fullName>
        <label>Notepad</label>
        <referenceTo>ccpt__Notepad__c</referenceTo>
        <relationshipLabel>Notes</relationshipLabel>
        <relationshipName>Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <recordTypes>
        <fullName>ccpt__Text</fullName>
        <active>true</active>
        <label>Text</label>
    </recordTypes>
</CustomObject>